src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AIMPortMgmt__External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIMPortMgmt__Most_Recent_Financial_Metrics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Financial Metrics</label>
        <referenceTo>AIMPortMgmt__Financial_Metric__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIMPortMgmt__Most_Recent_Metrics_Link__c</fullName>
        <formula>if(
NOT(ISBLANK(AIMPortMgmt__Most_Recent_Metrics__c)),
AIMPortMgmt__Most_Recent_Metrics__r.AIMPortMgmt__Investment_Metric__c,
&quot;&quot;)</formula>
        <label>Most Recent Metrics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIMPortMgmt__Most_Recent_Metrics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Metrics</label>
        <referenceTo>AIMPortMgmt__Investment_Metric__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIM__AIM_Status__c</fullName>
        <label>AIM Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIM__Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Specified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__Active_Pipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used in with pipeline__c field to discern if the pipeline is active or not</description>
        <label>Active Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Address_Line_1__c</fullName>
        <formula>BillingStreet</formula>
        <label>zAddress Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIM__Address_Line_2__c</fullName>
        <formula>IF(
  ISBLANK( BillingState ),
    BillingCity &amp; &quot; &quot; &amp; BillingPostalCode,
      IF(
        ISBLANK( BillingCity ),
          BillingState &amp; &quot; &quot; &amp; BillingPostalCode,
            BillingCity &amp; &quot;, &quot; &amp;  BillingState &amp; &quot; &quot; &amp; BillingPostalCode
             )
               )</formula>
        <label>zAddress Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIM__Assets_Under_Management__c</fullName>
        <label>Assets Under Management ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AIM__Co_Investment_Details__c</fullName>
        <inlineHelpText>What type of co-investments are they interested in? Sectors? Size? Stage?</inlineHelpText>
        <label>Co-Investment Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AIM__Co_Investment_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the Organization have an interest in making co-investments along side us?</inlineHelpText>
        <label>Co-Investment Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Company_Status__c</fullName>
        <label>Company Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operating</fullName>
                    <default>true</default>
                    <label>Operating</label>
                </value>
                <value>
                    <fullName>Operating Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Reorganizing</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Acquired</fullName>
                </value>
                <value>
                    <fullName>Non-Operating Shell Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Firm_Grade__c</fullName>
        <inlineHelpText>How do we rate the Organization?</inlineHelpText>
        <label>Firm Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__Fund_Types__c</fullName>
        <inlineHelpText>What type(s) of funds does the manager manage?</inlineHelpText>
        <label>Fund Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buyout</fullName>
                </value>
                <value>
                    <fullName>Hedge</fullName>
                </value>
                <value>
                    <fullName>Mezzanine</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Venture</fullName>
                </value>
                <value>
                    <fullName>Diversified</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Fundraising__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundraising</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Industry_Group__c</fullName>
        <label>Industry Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AIM__Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Populate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AIM__Industry_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Populate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__Investment_Exited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used with investment__c field to discern if investment was exited</description>
        <label>Investment Exited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Investment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Investor_Type__c</fullName>
        <label>Investor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Custodian</fullName>
                </value>
                <value>
                    <fullName>Endowment</fullName>
                </value>
                <value>
                    <fullName>Family Office</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Fund of Funds</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Pension - Corporate</fullName>
                </value>
                <value>
                    <fullName>Pension - Public</fullName>
                </value>
                <value>
                    <fullName>Prime Broker</fullName>
                </value>
                <value>
                    <fullName>Sovereign Wealth Fund</fullName>
                </value>
                <value>
                    <fullName>Wealth Advisor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__Investor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Last_Interaction_Date__c</fullName>
        <formula>AIM__Last_Interaction__r.AIM__Date__c</formula>
        <label>Last Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIM__Last_Interaction_Name__c</fullName>
        <formula>AIM__Last_Interaction__r.Name</formula>
        <label>Last Interaction Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIM__Last_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Interaction</label>
        <referenceTo>AIM__Interaction__c</referenceTo>
        <relationshipLabel>Accounts (Last Interaction)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIM__Last_Touch_Date__c</fullName>
        <formula>AIM__Last_Touch__r.AIM__Date__c</formula>
        <label>Last Touch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIM__Last_Touch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Touch</label>
        <referenceTo>AIM__Interaction__c</referenceTo>
        <relationshipLabel>Accounts (Last Touch)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIM__Most_Recent_Fund_Size__c</fullName>
        <formula>AIM__Most_Recent_Fund__r.AIM__Fund_Size__c</formula>
        <inlineHelpText>The Size of the Most Recent Fund</inlineHelpText>
        <label>Most Recent Fund Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AIM__Most_Recent_Fund_Vintage__c</fullName>
        <formula>AIM__Most_Recent_Fund__r.AIM__Vintage_Year__c</formula>
        <inlineHelpText>The Vintage Year of the Most Recent Fund</inlineHelpText>
        <label>Most Recent Fund Vintage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIM__Most_Recent_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Fund</label>
        <referenceTo>AIM__Fund__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIM__No_Cascade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Cascade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Operating_Stage__c</fullName>
        <label>Operating Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start Up</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Shipping Product</fullName>
                </value>
                <value>
                    <fullName>Profitable</fullName>
                </value>
                <value>
                    <fullName>Restart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__Pipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Populate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__Stage_Focus__c</fullName>
        <inlineHelpText>What stage(s) does the manager focus on for investment criteria?</inlineHelpText>
        <label>Stage Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Venture</fullName>
                </value>
                <value>
                    <fullName>Mid Venture</fullName>
                </value>
                <value>
                    <fullName>Later Venture</fullName>
                </value>
                <value>
                    <fullName>Growth Equity</fullName>
                </value>
                <value>
                    <fullName>Mezzanine</fullName>
                </value>
                <value>
                    <fullName>Buyout</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__Sub_Industry__c</fullName>
        <label>Sub-Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AIM__Industry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Populate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIM__UPPERCASE_Record_Id__c</fullName>
        <formula>UPPER( CASESAFEID( Id ) )</formula>
        <label>UPPERCASE Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIM__Year_Founded__c</fullName>
        <label>Year Founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FocalPoint_Cohort__c</fullName>
        <label>FocalPoint Cohort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local - Small - Sold</fullName>
                </value>
                <value>
                    <fullName>Local - Small - Refused</fullName>
                </value>
                <value>
                    <fullName>Local - Small - New</fullName>
                </value>
                <value>
                    <fullName>Local - Large - Sold</fullName>
                </value>
                <value>
                    <fullName>Local - Large - Refused</fullName>
                </value>
                <value>
                    <fullName>Local - Large - New</fullName>
                </value>
                <value>
                    <fullName>Distant - Small - Sold</fullName>
                </value>
                <value>
                    <fullName>Distant - Small - Refused</fullName>
                </value>
                <value>
                    <fullName>Distant - Small - New</fullName>
                </value>
                <value>
                    <fullName>Distant - Large - Sold</fullName>
                </value>
                <value>
                    <fullName>Distant - Large - Refused</fullName>
                </value>
                <value>
                    <fullName>Distant - Large - New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ford_Cohort__c</fullName>
        <label>Ford Cohort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>130</fullName>
                </value>
                <value>
                    <fullName>140</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
                <value>
                    <fullName>170</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>190</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>220</fullName>
                </value>
                <value>
                    <fullName>230</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>260</fullName>
                </value>
                <value>
                    <fullName>270</fullName>
                </value>
                <value>
                    <fullName>280</fullName>
                </value>
                <value>
                    <fullName>290</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ford_Contact_Status__c</fullName>
        <description>workaround, should be removed and restructured ASAP</description>
        <label>Ford Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Contact</fullName>
                    <default>true</default>
                    <label>No Contact</label>
                </value>
                <value>
                    <fullName>Voicemail Only</fullName>
                </value>
                <value>
                    <fullName>Single Call</fullName>
                </value>
                <value>
                    <fullName>Multiple Calls</fullName>
                </value>
                <value>
                    <fullName>In Person Meeting</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>No Ownership</fullName>
                </value>
                <value>
                    <fullName>Email Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ford_Owner_Location__c</fullName>
        <label>Ford Owner Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>In State</fullName>
                </value>
                <value>
                    <fullName>Distant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ford_Target_Status__c</fullName>
        <label>Ford Priority Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High - Top Priority</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ford_Target__c</fullName>
        <label>Ford Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Phase 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SRP_Company_Code__c</fullName>
        <label>SRP Company Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountOwnerChangeDate__c</fullName>
        <label>Account Owner Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>daysSinceOwnerChange__c</fullName>
        <formula>if(ISBLANK(accountOwnerChangeDate__c), &apos;NA&apos;, TEXT(Today() -  accountOwnerChangeDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Owner Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>family_id_old__c</fullName>
        <externalId>true</externalId>
        <label>family-id-old</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followUpFrequency__c</fullName>
        <inlineHelpText>Measured in days</inlineHelpText>
        <label>Follow Up Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>&quot;/&quot;&amp;Id</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>owner_id_old__c</fullName>
        <externalId>true</externalId>
        <label>owner-id-old</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AIM__All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.AIM__Default</value>
        </filters>
        <label>Copy of All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AIM__Fund_Managers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AIM__Fund_Types__c</columns>
        <columns>AIM__Last_Interaction__c</columns>
        <columns>AIM__Last_Interaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.AIM__Fund_Manager</value>
        </filters>
        <label>Fund Managers</label>
    </listViews>
    <listViews>
        <fullName>AIM__Investors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AIM__Investor_Type__c</columns>
        <columns>AIM__Last_Interaction__c</columns>
        <columns>AIM__Last_Interaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.AIM__Investor</value>
        </filters>
        <label>Investors</label>
    </listViews>
    <listViews>
        <fullName>AIM__Operating_Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AIM__Last_Interaction__c</columns>
        <columns>AIM__Last_Interaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.AIM__Operating_Company</value>
        </filters>
        <label>Operating Companies</label>
    </listViews>
    <listViews>
        <fullName>AIM__Recently_Created</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>AIM__Last_Interaction__c</columns>
        <columns>AIM__Last_Interaction_Date__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Recently Created</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>followUpFrequency__c</columns>
        <columns>Ford_Owner_Location__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Mead</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.AIM__Default</value>
        </filters>
        <label>MER Accounts - Follow-up Frequency</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>startsWith</operation>
            <value>cdean</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Mineral_Owner_Focal_Point_BO</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FocalPoint_Cohort__c</columns>
        <columns>Ford_Owner_Location__c</columns>
        <columns>Ford_Cohort__c</columns>
        <columns>Ford_Contact_Status__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Mineral Owner - OTG</value>
        </filters>
        <label>Copy of Mineral Owner - Focal Point - BO</label>
    </listViews>
    <listViews>
        <fullName>Ford_Owners_No_Phone_Numbers</fullName>
        <columns>owner_id_old__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.PHONE1</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Ford Phase III - New</value>
        </filters>
        <label>Ford Owners - No Phone Numbers</label>
    </listViews>
    <listViews>
        <fullName>Mineral_Owner_Focal_Point</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FocalPoint_Cohort__c</columns>
        <columns>Ford_Owner_Location__c</columns>
        <columns>Ford_Cohort__c</columns>
        <columns>Ford_Contact_Status__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Mineral Owner - OTG</value>
        </filters>
        <label>Mineral Owner - Focal Point</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Ford_Target_Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>accountOwnerChangeDate__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>Portfolio_Investment_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Portfolio Investment</value>
        </filters>
        <label>Portfolio Investment Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>AIM__Default</fullName>
        <active>true</active>
        <description>Default type</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>AIM__Fund_Manager</fullName>
        <active>false</active>
        <description>A firm that manages funds</description>
        <label>Fund Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>AIM__Investor</fullName>
        <active>true</active>
        <description>An organization or individual that makes investments</description>
        <label>Investor</label>
    </recordTypes>
    <recordTypes>
        <fullName>AIM__Operating_Company</fullName>
        <active>false</active>
        <description>A company into which investments may be made</description>
        <label>Operating Company</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>